# compas_lmgc90

./: .editorconfig  .gitignore  CHANGELOG.md  CI_BUILD_NOTES.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  ONEAPI_BUILD_UBUNTU.md  ONEAPI_BUILD_WINDOWS.md  README.md  WRAPPER_SUMMARY.md  check-dependencies.py  environment.yml  minimal_example.py  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py  test_nanobind_exact.py
build_dev/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  lmgc90.config
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst
latest/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  (+3 more)
src/lmgc90_dev/src/Sandbox/: CMakeLists.txt
src/lmgc90_dev/src/Sandbox/Astro/exemple_3D/: command.py
src/lmgc90_dev/src/Sandbox/Astro/src/: gravity.f90
src/lmgc90_dev/src/Sandbox/Astro/swig/: astro.i
src/lmgc90_dev/src/Sandbox/BindingProjection/Binding_src/d-LibPrincf90/save/: ChpoToChamno.f90
src/lmgc90_dev/src/Sandbox/BindingProjection/Binding_src/d-LibUtilf/: DistToSimplex.f  Makefile  NodesInSimplex2.f  ianul.f  place2.f  traces.f
src/lmgc90_dev/src/Sandbox/BindingProjection/Binding_src/d-tests/: ddinttoreal8.f  testdd6.m
src/lmgc90_dev/src/Sandbox/BindingProjection/src/: mod_a_projection.f90  test.f90
src/lmgc90_dev/src/Sandbox/Compas/: BUILD.md  BUILD_STANDALONE.md  CMakeLists.txt  Makefile  README.md  build_and_run.sh  comgc90  comgc90.c  command.cpp  frun  gen_dem_vault.py  lmgc90.cfg  post.py  result.json  result_0.json  result_100.json  result_200.json  result_300.json  result_400.json  result_500.json  result_600.json  result_700.json  result_800.json  result_900.json  wrap_lmgc90_compas.f90  wrap_lmgc90_compas.h  wrap_lmgc90_compas.mod
src/lmgc90_dev/src/Sandbox/Compas/OUTBOX/: BODIES.OUT  DOF.OUT.1  DOF.OUT.10  DOF.OUT.100  DOF.OUT.1000  DOF.OUT.101  DOF.OUT.102  DOF.OUT.103  DOF.OUT.104  DOF.OUT.105  DOF.OUT.106  DOF.OUT.107  DOF.OUT.108  DOF.OUT.109  DOF.OUT.11  DOF.OUT.110  DOF.OUT.111  DOF.OUT.112  DOF.OUT.113  DOF.OUT.114  DOF.OUT.115  DOF.OUT.116  DOF.OUT.117  DOF.OUT.118  DOF.OUT.119  DOF.OUT.12  DOF.OUT.120  DOF.OUT.121  DOF.OUT.122  DOF.OUT.123  DOF.OUT.124  DOF.OUT.125  DOF.OUT.126  DOF.OUT.127  DOF.OUT.128  DOF.OUT.129  DOF.OUT.13  DOF.OUT.130  DOF.OUT.131  DOF.OUT.132  (+1962 more)
src/lmgc90_dev/src/Sandbox/Compas/build_c/: CMakeCache.txt  Makefile  cmake_install.cmake  wrap_lmgc90_compas.mod
src/lmgc90_dev/src/Sandbox/Ddm/: README
src/lmgc90_dev/src/Sandbox/Ddm/exemple100000/DATBOX/: BODIES.DAT_bordures
src/lmgc90_dev/src/Sandbox/Ddm/python/: Decomposition_de_domaine.py  dam_class.py
src/lmgc90_dev/src/Sandbox/GGC/ChiPy_src/: makefile
src/lmgc90_dev/src/Sandbox/GGC/Examples/test_grande_taille/DATBOX/: DRV_DOF.DAT_ori
src/lmgc90_dev/src/Sandbox/Standalone/: DKDK_standalone_DDM_MDS.f90  DKDKmp_standalone.f90  DKJC_standalone.f90  Global_declaration.f90  PRPR_standalone.f90  PRPR_standalone_DDM.f90  SPSP_standalone.f90  SPSP_standalone_DDM.f90  mod_DDM_3D.f90  mod_DKJC_standalone.f90
src/lmgc90_dev/src/Sandbox/compas_fortran_c/: LIBRARIES.md  Makefile  README.md  comgc90  create_unified_lib.sh  wrap_lmgc90_compas.mod
src/lmgc90_dev/src/Sandbox/compas_fortran_c/DATBOX/: DOF.INI
src/lmgc90_dev/src/Sandbox/compas_fortran_c/OUTBOX/: DOF.OUT.1  DOF.OUT.10  DOF.OUT.100  DOF.OUT.11  DOF.OUT.12  DOF.OUT.13  DOF.OUT.14  DOF.OUT.15  DOF.OUT.16  DOF.OUT.17  DOF.OUT.18  DOF.OUT.19  DOF.OUT.2  DOF.OUT.20  DOF.OUT.21  DOF.OUT.22  DOF.OUT.23  DOF.OUT.24  DOF.OUT.25  DOF.OUT.26  DOF.OUT.27  DOF.OUT.28  DOF.OUT.29  DOF.OUT.3  DOF.OUT.30  DOF.OUT.31  DOF.OUT.32  DOF.OUT.33  DOF.OUT.34  DOF.OUT.35  DOF.OUT.36  DOF.OUT.37  DOF.OUT.38  DOF.OUT.39  DOF.OUT.4  DOF.OUT.40  DOF.OUT.41  DOF.OUT.42  DOF.OUT.43  DOF.OUT.44  (+160 more)
src/lmgc90_dev/src/Sandbox/compas_fortran_c/modules/: a_bdary_alpxx.mod  a_bdary_clxxx.mod  a_bdary_joncx.mod  a_bdary_pt3dx.mod  a_multief.mod  a_poroef.mod  clalp.mod  cpg_3d.mod  discretegeometry.mod  diskl.mod  dkdkl.mod  dnlyc.mod  externaldetection.mod  inter_meca_handler_2d.mod  joncx.mod  parameters.mod  planx.mod  postpro_3d.mod  pt2dl.mod  rbdy2.mod  rbdy3_type.mod  rtree.mod  spplx.mod  thermailx.mod  thermalsolver.mod  xksid.mod
src/lmgc90_dev/src/Sandbox/compas_fortran_c/src/: comgc90.c  wrap_lmgc90_compas.f90  wrap_lmgc90_compas.h
src/lmgc90_dev/src/Sandbox/meca_lib/: lmgc90.cfg.in
src/lmgc90_dev/src/obsolete/ChiPy/simulation/: CMakeLists.txt  wrap_integrator.f90  wrap_nlgs_newarch.h
src/lmgc90_dev/src/obsolete/Chic/src/contact_3D/: CMakeLists.txt  wrap_CDCDx.f90  wrap_SPSPx.f90
src/lmgc90_dev/src/obsolete/Chic/src/kernel/: CMakeLists.txt
temp/lmgc90_dev/src/obsolete/: CMakeLists.txt
temp/lmgc90_dev/src/obsolete/ChiPy/simulation/: wrap_interaction_handler.h  wrap_nlgs_newarch.f90
temp/lmgc90_dev/src/obsolete/ChiPy/src/contact_2D/: wrap_CLALp.f90  wrap_DKJCx.f90
temp/lmgc90_dev/src/obsolete/ChiPy/src/rigid_2D/: wrap_POLYG.f90
temp/lmgc90_dev/src/obsolete/ChiPy/src/rigid_3D/: wrap_CYLND.f90
temp/lmgc90_dev/src/obsolete/ChiPy/src/shared/: wrap_overall.f90  wrap_utilities.f90
temp/lmgc90_dev/src/obsolete/ChiPyGUI/Data/: interfaceLeftPanel.py  interfaceRightPanel.py
temp/lmgc90_dev/src/obsolete/Chic/more_src_std/contact_2D/: wrap_DKALp.inc  wrap_DKDKx.inc  wrap_DKKDx.inc
temp/lmgc90_dev/src/obsolete/Chic/more_src_std/rigid_2D/: wrap_DISPx.inc
temp/lmgc90_dev/src/obsolete/Chic/src/contact_2D/: wrap_PLJCx.f90
temp/lmgc90_dev/src/obsolete/Chic/src/contact_3D/: wrap_PRPRx.f90  wrap_SPDCx.f90
temp/lmgc90_dev/src/obsolete/Chic/src/kernel/: wrap_nlgs.f90
temp/lmgc90_dev/src/obsolete/Chic/src/mailx/: wrap_ASpxx.f90  wrap_DISKL.f90
temp/lmgc90_dev/src/obsolete/Chic/src/rigid_3D/: makefile
temp/lmgc90_dev/src/obsolete/Core/contact_3D/: mod_PRPRx.f90
temp/lmgc90_dev/src/obsolete/Core/interaction/: interaction_type.f90
temp/lmgc90_dev/src/obsolete/Core/melimelo/: mod_avatar.f90
temp/lmgc90_dev/src/obsolete/Core/simulation/: mod_interaction_handler.f90  mod_nlgs_new_arch.f90  mod_soe.f90
(+1993 files in other folders)
